회원가입, 로그인 서버 구현